--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ serde_json = "1"
 validator = "0"
 validator_derive = "0"
 reqwest = { version = "0.11", features = ["json"] }
+tracing = "0"
+tracing-futures = "0"
+tracing-actix-web = "0.7"
+tracing-log = "0.2.0"
+tracing-subscriber = { version = "0", features= ["env-filter"] }
