--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix = "0"
-actix-web = "4"
+actix-web = { version = "4", features = ["rustls"] }
 actix-cors = "0"
 config = "0"
 dotenv = "0"
